# django-fastapi-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alias.sh  backend.env.sample  docker-compose.yaml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
app/admin/: __init__.py  user.py
app/api/: __init__.py  deps.py
app/api/routes/: health.py  login.py  user.py
app/migrations/: 0001_initial.py
app/models/: base.py  user.py
app/schemas/: base.py  user.py
config/: asgi.py  exceptions.py  fastapi_response.py  log.py  security.py
config/settings/: general.py  local.py  production.py  test.py
docs/: models_diagram.puml  openapi.json
scripts/: README.md  export_openapi.sh  generate_models_diagram.sh  print_openapi.py
